<resources>
    <string name="app_name">GW2Imp</string>
    <string name="overview_information_title">Informationen</string>
    <string name="overview_loaded_item_count">Artikelanzahl</string>
    <string name="overview_loaded_price_count">Preise (im Monat)</string>
    <string name="overview_history_count">Historie (Monate)</string>
    <string name="overview_status_title">Status</string>
    <string name="overview_search_index_sync">Suchindex</string>
    <string name="overview_word_index_sync">Wortindex</string>
    <string name="overview_index_sync_incomplete">Unvollständig</string>
    <string name="overview_index_sync_complete">Synchronisiert</string>
    <string name="overview_status_in_progress">Wird ermittelt</string>

    <string name="app_notification_title">GW2 Imp</string>
    <string name="app_notification_text">Collecting treasures&#8230;</string>

    <string name="api_account_key_title">API-Key</string>
    <string name="api_account_key_text">Für den Zugriff auf den Account wird ein GW2-API Key benötigt.\nDieser kann auf der GuildWars 2 Seite nach einem erfolgreichen Account Login erstellt werden. Der API Key steht dort auch als QR Code zur Verfügung.</string>
    <string name="api_account_key_skip">Überspringen</string>
    <string name="api_account_key_next">Weiter</string>

    <string name="api_account_key_validating">Der Account-Zugriff wird validiert</string>
    <string name="api_account_key_error">Dein Account-key ist ungültig. Bitte überprüfe Deine Eingabe.</string>
    <string name="api_account_key_error_format">XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXXXXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX</string>
    <string name="api_account_key_error_token_count" formatted="false">Du unwürdiger Wurm! Ungültige Anzahl der Api-Key Token, separiert durch \'-\'. (Erhalten=\'%s\' Erwartet=\'%s\')</string>
    <string name="api_account_key_error_token_format" formatted="false">Du unwürdiger Wurm! Das Token an der %s Stelle weißt ein falsches Format auf! (Erhalten=\'%s\' Erwartet=\'%s\')</string>
    <string name="api_account_key_error_token_length" formatted="false">Du unwürdiger Wurm! Die Länge des Api-Keys ist fehlerhaft. (Erhalten=\'%s\' Erwartet=\'%s\')</string>
    <string name="api_account_key_error_unknown">Bitte überprüfe das Format des Api-Keys.</string>

    <string name="core_navigation_account">Account</string>
    <string name="core_navigation_account_overview">Übersicht</string>
    <string name="core_navigation_account_character">Charaktere</string>
    <string name="core_navigation_account_achievements">Erfolge</string>
    <string name="core_navigation_account_raid">Raids</string>
    <string name="core_navigation_account_buy">Kaufen</string>
    <string name="core_navigation_account_sell">Verkaufen</string>
    <string name="core_navigation_account_trading_market">Handelsmarkt</string>
    <string name="core_navigation_account_trend">Überwachung</string>
    <string name="core_navigation_account_trading">Waren</string>
    <string name="core_navigation_account_common">Allgemeine Informationen</string>
    <string name="core_navigation_dailies_today">Tägliche events heute</string>
    <string name="core_navigation_dailies_tomorrow">Tägliche events morgen</string>
    <string name="core_navigation_event_timer">Event timer</string>
    <string name="core_navigation_world_boss_event_timer">Weltbosse</string>
    <string name="core_navigation_license">Lizenzen</string>
    <string name="core_navigation_settings">Einstellungen</string>

    <string name="account_raid_uncompleted">OFFEN</string>
    <string name="account_raid_completed">VOLLSTÄNDIG</string>
    <string name="account_raid_getting_raid_data">Deine aktuellen Raid-Informationen werden ermittelt</string>
    <string name="account_raid_data_access_error">Es trat ein Fehler beim Datenbankzugriff auf: %s</string>
    <string name="account_raid_general_info">Es trat ein Fehler beim Ermitteln der Raid-Informationen auf: %s</string>
    <string name="account_raid_account_data">Es trat ein Fehler beim Ermitteln der Account Raid-Informationen auf: %s</string>

    <string name="account_daily_getting_your_data">Deine aktuellen Event-Informationen werden ermittelt</string>
    <string name="account_daily_in_progress" formatted="false">%d von %d abgeschlossen</string>
    <string name="account_daily_uncompleted">OFFEN</string>
    <string name="account_daily_completed">ABGESCHLOSSEN</string>

    <string name="world_boss_getting_your_data">Deine Weltboss-Informationen werden ermittelt</string>
    <string name="world_boss_status_pattern" formatted="false">Um %02d:%02d</string>
    <string name="world_boss_reward_pattern" formatted="false">Bonus: %s, %s</string>
    <string name="world_boss_chests_pattern" formatted="false">%d Kisten</string>
    <string name="world_boss_chest_pattern" formatted="false">%d Kiste</string>
    <string name="world_boss_reward_item_pattern">%d Gegenstand</string>
    <string name="world_boss_reward_items_pattern">%d Gegenstände</string>
    <string name="world_boss_data_access_error">Bei der Ermittlung der Weltboss-Informationen ist ein Fehler aufgetreten: %s</string>

    <string name="account_trend_getting_trend_data">Deine aktuellen Trend-Informationen werden ermittelt</string>
    <string name="account_trend_data_access_error">Es trat ein Fehler beim Datenbankzugriff auf: %s</string>
    <string name="account_trend_top_increasing_items">Gegenstände (steigend)</string>
    <string name="account_trend_top_decreasing_items">Gegenstände (fallend)</string>
    <string name="account_trend_top_increasing_my_items">Meine Gegenstände (steigend)</string>
    <string name="account_trend_top_decreasing_my_items">Meine Gegenstände (fallend)</string>
    <string name="account_trend_gem_course">Edelstein-Kurs</string>

    <string name="trading_items_getting_your_data">Deine Handels-Informationen werden ermittelt</string>
    <string name="trading_items_data_access_error">Bei der Ermittlung der Handels-Informationen ist ein Fehler aufgetreten: %s</string>
    <string name="trading_items_data_count_warning">Bisher liegen noch nicht genug Preise vor. Versuche es zu einem späteren Zeitpunkt noch einmal.</string>
    <string name="trading_items_data_search_index_updating">Der Such- und Wortindex wird nachwievor aktualisiert. Die Suche steht nur eingeschränkt zur Verfügung.</string>
    <string name="trading_items_search">Suche</string>
    <string name="trading_items_buy">Kaufspreis</string>
    <string name="trading_items_sell">Verkaufspreis</string>
    <string name="trading_items_currency_format">%s %s</string>
    <string name="trading_items_last_update">Letzte Aktualisierung</string>
    <string name="trading_items_sell_min_price">Min. Verkaufspreis</string>
    <string name="trading_items_sell_max_price">Max. Verkaufspreis</string>
    <string name="trading_items_buy_min_price">Min. Einkaufpreis</string>
    <string name="trading_items_buy_max_price">Max. Einkaufpreis</string>

    <string name="core_license_gw2_header">Guild Wars 2 Bilder</string>
    <string name="core_license_gw2_text">Das Copyright der genutzten Bilder gehört einzig und alleine ArenaNet. Für den privaten Einsatz hat ArenaNet freundlicherweise die Verwendung der Bilder gestattet. Für genauere Informationen siehe:\n\nhttps://www.guildwars2.com/en/legal/guild-wars-2-content-terms-of-use/</string>
    <string name="core_license_gw2_copyright">© 2015 ArenaNet, LLC. All rights reserved. NCSOFT, the interlocking NC logo, ArenaNet, Guild Wars, Guild Wars Factions, Guild Wars Nightfall, Guild Wars: Eye of the North, Guild Wars 2, Heart of Thorns, and all associated logos and designs are trademarks or registered trademarks of NCSOFT Corporation. All other trademarks are the property of their respective owners.</string>

    <string name="world_boss_taidha_covington">Admiral Taidha Covington</string>
    <string name="world_boss_jungle_worm">Dschungelwurm</string>
    <string name="world_boss_evolved_jungle_worm">Triple Trouble</string>
    <string name="world_boss_mega_destroyer">Megadestroyer</string>
    <string name="world_boss_shadow_behemoth">Shadow Behemoth</string>
    <string name="world_boss_shatterer">Shatterer</string>
    <string name="world_boss_svanir_shaman_chief">Svanier Schamane</string>
    <string name="world_boss_modniir_ulgoth">Modniier Ulgoth</string>
    <string name="world_boss_fire_elemental">Feuerelementar</string>
    <string name="world_boss_golem_mark_two">Golem Mark II</string>
    <string name="world_boss_tequatl_the_sunless">Tequatl</string>
    <string name="world_boss_frozen_maw">The frozen maw</string>
    <string name="world_boss_karka_queen">Karka Königin</string>
    <string name="world_boss_claw_of_jormag">Klaue Jormag</string>

    <string name="connection_exception">Es konnte keine Verbindung zum GuildWars2 Server hergestellt werden. Überprüfe Deine Internetverbindung.</string>

    <string name="http_400_bad_request">Es ist ein technischer Fehler beim prozessieren der Anfrage aufgetreten (http 400)</string>
    <string name="http_401_unauthorized">Die Authorisierung ist fehlgeschlagen (http 401)</string>
    <string name="http_403_forbidden">Der Zugriff auf die URL ist nicht gestattet. Ist der API-Key gültig? (http 403)</string>
    <string name="http_404_not_found">Die URL kann nicht aufgerufen werden (http 404)</string>
    <string name="http_405_method_not_allowed">Die Zugriffsmethode existiert nicht (http 405)</string>
    <string name="http_500_internal_server_error">Es ist ein interner Serverfehler aufgetreten. Versuche es zu einem späteren Zeitpunkt erneut. (http 500)</string>
    <string name="http_503_service_unavailable">Der GuildWars2 Dienst steht momentan nicht zur Verfügung. Versuche es zu einem späteren Zeitpunkt erneut. (http 503)</string>
    <string name="http_504_connection_gateway_timeout">Es ist eine Zeitüberschreitung beim Gatewayzugriff aufgetreten. Versuche es zu einem späteren Zeitpunkt erneut. (http 504)</string>
    <string name="http_code_unknown">Es ist ein unbekannter Fehler bei der Anfrage aufgetreten (http %s)</string>

    <string name="technical_fragment_data_setup_icon_description">Fehlericon</string>
    <string name="empty"></string>
</resources>



