<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scavi.de.gw2imp.ui.fragment.LicenseFragment">

    <TextView
        style="@style/Gw2ImpTheme.Section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/license_gw2_header_margin_bottom"
        android:layout_marginEnd="@dimen/license_gw2_header_margin_right"
        android:layout_marginStart="@dimen/license_gw2_header_margin_left"
        android:layout_marginTop="@dimen/license_gw2_header_margin_top"
        android:text="@string/core_license_gw2_header" />

    <TextView
        style="@style/Gw2ImpTheme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_marginBottom="@dimen/license_gw2_info_margin_bottom"
        android:layout_marginEnd="@dimen/license_gw2_info_margin_right"
        android:layout_marginStart="@dimen/license_gw2_info_margin_left"
        android:layout_marginTop="@dimen/license_gw2_info_margin_top"
        android:text="@string/core_license_gw2_text" />

    <TextView
        style="@style/Gw2ImpTheme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/license_gw2_info_margin_bottom"
        android:layout_marginEnd="@dimen/license_gw2_info_margin_right"
        android:layout_marginStart="@dimen/license_gw2_info_margin_left"
        android:layout_marginTop="@dimen/license_gw2_info_margin_top"
        android:text="@string/core_license_gw2_copyright" />

</LinearLayout>
