<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scavi.de.gw2imp.ui.activity.ApiAccountKeyActivity">

    <ImageView
        android:id="@+id/gw2_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/registration_logo" />

    <LinearLayout
        android:id="@+id/account_api_key_information_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/Gw2ImpTheme.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_api_key_text_margin_bottom"
            android:layout_marginEnd="@dimen/account_api_key_text_margin_right"
            android:layout_marginStart="@dimen/account_api_key_text_margin_left"
            android:layout_marginTop="@dimen/account_api_key_text_margin_top"
            android:text="@string/api_account_key_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_api_key_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/account_api_key_field_margin_bottom"
                android:layout_marginEnd="@dimen/account_api_key_field_margin_right"
                android:layout_marginStart="@dimen/account_api_key_field_margin_left"
                android:layout_marginTop="@dimen/account_api_key_field_margin_top"
                android:layout_weight="5"
                android:theme="@style/Gw2ImpTheme.TextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/account_api_key_input_field"
                    style="@style/Gw2ImpTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="72"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/account_api_key_scan"
                android:layout_width="@dimen/button_floating_min_diameter"
                android:layout_height="@dimen/button_floating_min_diameter"
                android:layout_marginBottom="@dimen/account_api_key_scan_code_margin_bottom"
                android:layout_marginEnd="@dimen/account_api_key_scan_code_margin_right"
                android:layout_marginStart="@dimen/account_api_key_scan_code_margin_left"
                android:layout_marginTop="@dimen/account_api_key_scan_code_margin_top"
                android:layout_weight="1"
                android:minHeight="@dimen/button_floating_min_diameter"
                android:minWidth="@dimen/button_floating_min_diameter"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_api_key_validating_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Gw2ImpTheme.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/api_account_key_validating" />

        <ProgressBar
            android:id="@+id/account_api_key_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_api_key_progress_bar_margin_bottom"
            android:layout_marginEnd="@dimen/account_api_key_progress_bar_margin_right"
            android:layout_marginStart="@dimen/account_api_key_progress_bar_margin_left"
            android:layout_marginTop="@dimen/account_api_key_progress_bar_margin_top"
            android:backgroundTint="@color/core_progressbar_color"
            android:indeterminate="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/account_api_key_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skip_api_account_key"
                style="@style/Gw2ImpTheme.BottomButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_bottom_height"
                android:layout_weight="1"
                android:text="@string/api_account_key_skip" />

            <Button
                android:id="@+id/verify_api_account_key"
                style="@style/Gw2ImpTheme.BottomButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_bottom_height"
                android:layout_weight="1"
                android:text="@string/api_account_key_next" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>